--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@faker-js/faker": "^9.8.0",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "20.17.47",
     "@types/react": "^19.0.0",
