--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/server": "11.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "next-auth": "4.24.11",
